Closed Bug 820157 Opened 12 years ago Closed 12 years ago

bluetooth Hfp not sending status updates

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)

RESOLVED FIXED
B2G C3 (12dec-1jan)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: ggrisco, Assigned: gyeh)

Details

Attachments

(1 file, 1 obsolete file)

Checked using Mecapp and NOKIA 616 Carkit.  Changes in the following status are not being sent to HF:

1. Transfer of Registration Status
2. Transfer of Signal Strength Indication
3. Transfer of Roaming Status Indication
4. Transfer of Battery Level Indication
5. SMS indication
We're confirming with others on the team, but car/auto support is likely not a requirement for v1.
Flags: needinfo?(clee)
Synced with product team. We need more time to figure out if Bluetooth module would be able to be notified of these status changes.
Eric is on this and will follow-up on the feasibility here.

Eric, can you confirm if this is necessary for any type of certification?
Flags: needinfo?(clee)
When mobile voice connection info is updated, we'll check registration status, signal strength and roaming status, and transfer them to HS if they're updated.
Assignee: nobody → gyeh
Attachment #692240 - Flags: review?(echou)
Comment on attachment 692240 [details] [diff] [review]
Patch 1(v1): Update registration status, signal strength, roaming status

Review of attachment 692240 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, r=me with nits addressed.

::: dom/bluetooth/BluetoothHfpManager.cpp
@@ +29,4 @@
>  #define AUDIO_VOLUME_BT_SCO "audio.volume.bt_sco"
> +#define MOZSETTINGS_CHANGED_ID "mozsettings-changed"
> +#define MOBILE_CONNECTION_VOICE_CHANGED "mobile-connection-voice-changed"
> +#define NS_RILCONTENTHELPER_CONTRACTID "@mozilla.org/ril/content-helper;1"

This has been defined in nsRadioInterfaceLayer.h, just include and use it.

@@ +756,5 @@
>  bool
>  BluetoothHfpManager::SendCommand(const char* aCommand, const int aValue)
>  {
> +  if (mSocketStatus == SocketConnectionStatus::SOCKET_DISCONNECTED ||
> +      mSocketStatus == SocketConnectionStatus::SOCKET_LISTENING) {

"if (mSocketStatus != SocketConnectionStatus::SOCKET_CONNECTED)" would be fine, I think.
Attachment #692240 - Flags: review?(echou) → review+
(In reply to Chris Lee [:clee] from comment #3)
> Eric is on this and will follow-up on the feasibility here.
> 
> Eric, can you confirm if this is necessary for any type of certification?

1. Transfer of Registration Status
2. Transfer of Signal Strength Indication
3. Transfer of Roaming Status Indication
4. Transfer of Battery Level Indication
5. SMS indication

The patch solved point 1~3, but we won't fix 4 and 5 by v1 because we are unable to get the status update of Battery and SMS. I think this won't affect the result of conformance test.
blocking-basecamp: ? → +
Target Milestone: --- → B2G C3 (12dec-1jan)
Thanks Eric. Can you file a followup bug for 4 & 5, and we'll target that for a subsequent release.
(In reply to Dietrich Ayala (:dietrich) from comment #7)
> Thanks Eric. Can you file a followup bug for 4 & 5, and we'll target that
> for a subsequent release.

I filed a follow-up for 4 (bug 823346). However, for the implementation of SMS indication, it is included in another profile - MAP (Message Access Profile), so I would prefer not filing a bug for now since we haven't had a schedule for MAP.
https://hg.mozilla.org/mozilla-central/rev/ebad7aef8c52
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: