Bug 820157 - Patch 1(v1): Update regsitration status, signal strength, roaming status